Fixed table text alignment #2

--- a/src/App.scss
+++ b/src/App.scss
@@ -84,7 +84,7 @@ table.pmcPanel {
     padding: 5px;
     font-size: 16px;
 
-    * {
+    p {
       text-align: left;
     }
 
